--- a/dot_config/compton/compton.conf
+++ b/dot_config/compton/compton.conf
@@ -1,20 +1,3 @@
 backend = "glx";
-
-#menu-opacity = 1.0;
-#inactive-opacity = 0.9;
-#frame-opacity = 0.2;
-
-#opacity-rule = [
-#	"100:name = 'rofi'",
-#	"100:name = 'i3lock'"
-#	"100:name = 'Netflix - Chromium'"
-#];
-
-#blur-background = true;
-#blur-method = "kawase";
-#blur-strength = 8;
-#blur-kern = "3x3box";
-
-#fading = true;
-#fade-in-step = 0.2;
-#fade-out-step = 0.2;
+inactive-opacity = 0.85;
+opacity-rule = [ "99:_NET_WM_STATE@:32a = '_NET_WM_STATE_FULLSCREEN'" ];
