--- a/dot_config/polybar/modules/battery.conf
+++ b/dot_config/polybar/modules/battery.conf
@@ -10,9 +10,9 @@ format-charging = <label-charging><ramp-capacity>
 format-discharging = <label-discharging><ramp-capacity>
 format-full = <label-full><ramp-capacity>
 
-label-charging = %time%|%consumption%W|%percentage:2%%
-label-discharging = %time%|%consumption%W|%percentage:2%%
-label-full = %percentage:2%%
+label-charging = %time% %consumption%W %percentage:2%% 
+label-discharging = %time% %consumption%W %percentage:2%%
+label-full = %percentage:2%% 
 
 ramp-capacity-0 = 
 ramp-capacity-1 = 
