--- a/dot_config/compton/compton.conf
+++ b/dot_config/compton/compton.conf
@@ -1,3 +1,10 @@
 backend = "glx";
+vsync = true;
+xrender-sync-fence = true;
 inactive-opacity = 0.85;
-opacity-rule = [ "99:_NET_WM_STATE@:32a = '_NET_WM_STATE_FULLSCREEN'" ];
+opacity-rule = [
+    "100:_NET_WM_STATE@:32a = '_NET_WM_STATE_FULLSCREEN'",
+    "100:name *= 'YouTube'",
+    "100:name *= 'Netflix'",
+    "100:class_g = 'vlc'",
+    ];
