--- a/dot_config/compton/compton.conf
+++ b/dot_config/compton/compton.conf
@@ -7,4 +7,5 @@ opacity-rule = [
     "100:name *= 'YouTube'",
     "100:name *= 'Netflix'",
     "100:class_g = 'vlc'",
+    "100:name *= 'i3lock'",
     ];
