comment out i3 from polybar

--- a/dot_config/polybar/modules/.chezmoiignore
+++ b/dot_config/polybar/modules/.chezmoiignore
@@ -1,6 +1,6 @@
-{{ if ne .chezmoi.hostname "martin-PC" }}
+{{/* if ne .chezmoi.hostname "martin-PC" }}
 mpd.conf
-{{ end }}
+{{ end */}}
 
 {{ if not .is_laptop }}
 backlight.conf
