add i3 mode to polybar

--- a/dot_config/exact_polybar/modules/i3.conf
+++ b/dot_config/exact_polybar/modules/i3.conf
@@ -1,13 +1,18 @@
 [module/i3]
 type = internal/i3
 
-format = <label-state>
+format = <label-state> <label-mode>
 index-sort = true
 enable-click = true
 fuzzy-match = true
 wrapping-scroll = false
 strip-wsnumbers = true
 pin-workspaces = true
+
+label-mode = %mode%
+label-mode-padding = 2
+label-mode-background = #c0ffffff
+label-mode-foreground = #ff0000
 
 label-focused = %index% %icon%
 label-focused-background = ${colors.background}
