--- a/dot_config/exact_polybar/modules/i3.conf
+++ b/dot_config/exact_polybar/modules/i3.conf
@@ -14,36 +14,26 @@ label-mode-padding = 2
 label-mode-background = #c0ffffff
 label-mode-foreground = #ff0000
 
-label-focused = %index% %icon%
+label-focused = [%name%] %index%
 label-focused-background = ${colors.background}
 label-focused-foreground = ${colors.foreground}
 label-focused-padding = 3
 label-focused-overline = ${colors.foreground-alt}
 
-label-unfocused = %index% %icon%
+label-unfocused = [%name%] %index%
 label-unfocused-background = ${colors.background}
 label-unfocused-foreground = ${colors.background-alt}
 label-unfocused-padding = 3
 label-unfocused-overline = ${colors.background}
 
-label-urgent = %index% %icon%
+label-urgent = [%name%] %index%
 label-urgent-background = ${colors.background}
 label-urgent-foreground = ${colors.foreground-alt}
 label-urgent-padding = 3
 label-urgent-overline = ${colors.background}
 
-label-visible = %index% %icon%
+label-visible = [%name%] %index%
 label-visible-background = ${colors.background}
 label-visible-foreground = ${colors.foreground}
 label-visible-padding = 3
 label-visible-overline = ${colors.background}
-
-ws-icon-0 = 1;
-ws-icon-1 = 2;
-ws-icon-2 = 3;
-ws-icon-3 = 4;
-ws-icon-4 = 5;ﱄ
-ws-icon-5 = 6;
-ws-icon-6 = 7;
-ws-icon-7 = 8;
-ws-icon-default = 
